...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <!-- Search bar -->
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:drawablePadding="12dp"
        android:hint="Search for game type..."
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <ImageButton
            android:id="@+id/btnCreateGame"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/white_box"
            android:src="@drawable/baseline_add_32"
            app:layout_constraintBottom_toBottomOf="@id/toggle_location"
            app:layout_constraintTop_toTopOf="@id/toggle_location"
...
