<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/title_my_games" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/baseline_help_24"
        android:title="@string/title_help" />

</menu>