...

        </LinearLayout>
    </HorizontalScrollView>


    <Button
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="FIND A MATCH"
        android:textSize="16sp"
        android:background="@drawable/border_background"
...
